--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "v = np.array([2,4,6])\n",
+    "print"
    ]
   },
   {
