Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
    "outputs": [],
    "source": [
     "print(x[0])\n",
-    "printx[2]"
+    "print(x[2])\n",
+    "print(x[0-1])"
    ]
   },
   {
