--- a/index.ipynb
+++ b/index.ipynb
@@ -154,13 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.141592653589793\n",
+      "-1.7453292519943295\n",
+      "3.141592653589793\n",
+      "2.443460952792061\n"
+     ]
+    }
+   ],
    "source": [
     "print(x[0])\n",
     "print(x[2])\n",
-    "print(x[0-1])"
+    "print(x[-1])\n",
+    "print(x[-2])"
    ]
   },
   {
@@ -182,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "print(x[2])"
    ]
   },
   {
